Source/WebDriver/gtk/WebDriverServiceGtk.cpp
@@ -52,15 +52,21 @@ bool WebDriverService::platformValidateCapability(const String& name, const Ref<
     if (browserOptions->isNull())
         return true;
 
-    auto binary = browserOptions->getString("binary"_s);
-    if (!binary)
-        return false;
+    if (auto binaryValue = browserOptions->getValue("binary"_s)) {
+        if (!binaryValue->asString())
+            return false;
+    }
 
-    auto useOverlayScrollbars = browserOptions->getBoolean("useOverlayScrollbars"_s);
-    if (!useOverlayScrollbars)
-        return false;
+    if (auto useOverlayScrollbarsValue = browserOptions->getValue("useOverlayScrollbars"_s)) {
+        if (!useOverlayScrollbarsValue->asBoolean())
+            return false;
+    }
 
-    if (auto browserArguments = browserOptions->getArray("args"_s)) {
+    if (auto browserArgumentsValue = browserOptions->getValue("args"_s)) {
+        auto browserArguments = browserArgumentsValue->asArray();
+        if (!browserArguments)
+            return false;
+
         unsigned browserArgumentsLength = browserArguments->length();
         for (unsigned i = 0; i < browserArgumentsLength; ++i) {
             auto argument = browserArguments->get(i)->asString();
@@ -69,7 +75,11 @@ bool WebDriverService::platformValidateCapability(const String& name, const Ref<
         }
     }
 
-    if (auto certificates = browserOptions->getArray("certificates"_s)) {
+    if (auto certificatesValue = browserOptions->getValue("certificates"_s)) {
+        auto certificates = certificatesValue->asArray();
+        if (!certificates)
+            return false;
+
         unsigned certificatesLength = certificates->length();
         for (unsigned i = 0; i < certificatesLength; ++i) {
             auto certificate = certificates->get(i)->asObject();
